--- a/templates/forgotten_password.html
+++ b/templates/forgotten_password.html
@@ -1,17 +1,17 @@
 {% include 'header.html' %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-<body>
+<main>
+  <section class="container">
+    <h1> Mot de passe oublié? </h1>
+    <form action="{{url_for('forgotten_password_page') }}" method="post" class="text-center w-80 ms-auto">
+      <div class="d-flex align-items-center w-50 ms-auto">
+        <label class="m-3" for="input-user">Entrez votre nom d'utilisateur ou mot de passe ici :</label>
+        <input class="m-3 w-25" id="input-user" name="input-user" type="text" placeholder="Ecrivez ici...">  
+      </div>
+      <input class="m-3 w-25 ms-auto" type="submit" value="Renvoyer password">
+    </form>
+  </section> 
+  
+</main>
 
-  <main class="container jumbotron">
-    <div>
-      <h1> TEST DOWNLOAD </h1>
-      {% for image in imgs : %}
-        <img style="width:10%; height:auto" src="data:;base64,{{ image }}"/>
-      {% endfor %}
-  </div>
-    <div>
-    {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-  </div>
-  </main>
-</body>
+{% include 'footer.html' %}
