--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,7 +72,7 @@ div.rating-star {
 
 .button-admin {
   display: inline-block;
-  background-color: #0d6efd;
+  background-color: black;
   font-size: 150%;
   color:white;
   border: 0;
@@ -82,13 +82,14 @@ div.rating-star {
   line-height: 1;
   text-decoration: none;
   margin: 2% 2%;
+  border-color: white;  
 }
 
 .button-admin:hover {
   background-color:white;
   border: 2px solid;
-  color: #0d6efd;
-  border-color: #0d6efd;  
+  color: black;
+  border-color: black;  
 }
 
 .admin-a {
@@ -206,7 +207,7 @@ input[type="text"].user-form-input:disabled {
   overflow: hidden;
   border: 2px solid grey;
   position:relative;
-  margin: 5% auto;
+  margin: 2% auto;
 }
 
 .avatar>img {
