--- a/templates/add.html
+++ b/templates/add.html
@@ -3,7 +3,7 @@
 
 <main>
 <h1> Ajouter une carte </h1>
-
+<!--
 <div class="container jumbotron">
     
   <form action="{{ url_for('add_page') }}" id="form-add" method='post'>
@@ -71,21 +71,11 @@
 
   </form>
 </div>
-
-<script type="text/javascript">
-
-const form = document.getElementById('form-add')
-const inputForm = document.querySelectorAll('.form-input');
-form.addEventListener('submit', (e) => {
-  inputForm.forEach ((resultat) => {
-      if (resultat.value == "" || resultat.value == null) {
-          e.preventDefault();
-          resultat.style.background = "red"
-          return false
-      }
-  })
-})
-
-</script>
+-->
+<section class="container">
+    <form action="{{ url_for('add_page') }}" method='post' enctype="multipart/form-data">
+        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "dark"}) }}
+    </form>
+</section>
 
 {% include 'footer.html' %}
