--- a/static/css/header-style.css
+++ b/static/css/header-style.css
@@ -23,9 +23,26 @@ header > nav {
   background-color: black;
 }
 
+header .nav-title {
+  color:white;
+  font-family: 'trajan-bold';
+  font-size:1.5rem;
+  margin:0!important;
+}
+
+header nav span {
+  font-size:0.7rem;
+}
+
+header .logo-header {
+  width: 40px;
+}
+
 body {
   font-family: 'trajan';
+  background-color: rgb(240,240,240);
 }
+
 
 h1 {
   font-family: 'trajan-bold';
@@ -39,18 +56,32 @@ h1 {
 }
 input {
   border: 1px solid transparent;
-  background-color: #f1f1f1;
+  background-color: white;
   padding: 10px;
   font-size: 16px;
 }
 input[type=text] {
-  background-color: #f1f1f1;
-  
+  background-color: white;
 }
+
 input[type=submit] {
-  background-color: DodgerBlue;
   color: #fff;
+  background-color: rgb(30,30,30)!important;
+  transition: all ease-in-out 0.3s; 
 }
+
+input[type=submit]:hover {
+  color: black;
+  border: 1px solid black;
+  background-color: rgb(240,240,240)!important;
+}
+
+input[type=submit]:focus {
+  background-color: rgba(200, 0,0, 0.7);
+  background-image: linear-gradient(315deg, rgba(200, 0, 0, 0.7) 40%, rgba(189, 134, 15, 0.7) 95%);
+  color:white;
+}
+
 .autocomplete-items {
   position: absolute;
   border: 1px solid #d4d4d4;
@@ -65,21 +96,28 @@ input[type=submit] {
 .autocomplete-items div {
   padding: 10px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: black;
   border-bottom: 1px solid #d4d4d4;
+  color:white;
 }
 .autocomplete-items div:hover {
   /*when hovering an item:*/
-  background-color: #e9e9e9;
+  color: white;
+  background-color: rgba(200, 0,0, 0.7);
+  background-image: linear-gradient(315deg, rgba(200, 0, 0, 1) 40%, rgba(189, 134, 15, 1) 95%);
 }
 .autocomplete-active {
   /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
+  background-color: DodgerBlue;
   color: #ffffff;
 }
 
 #dropdownMenuButton1 {
   background-color: black;
+  /*
+  background-color: rgba(200, 0,0, 0.7);
+  background-image: linear-gradient(315deg, rgba(200, 0, 0, 0.7) 40%, rgba(189, 134, 15, 0.7) 95%);
+  */
 }
 
 .dropdown-menu {
@@ -89,4 +127,14 @@ input[type=submit] {
 
 .dropdown-menu a {
   color:white;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  background-color: rgba(200, 0,0, 0.7);
+  background-image: linear-gradient(315deg, rgba(200, 0, 0, 0.7) 40%, rgba(189, 134, 15, 0.7) 95%);
+}
+
+
+.form-wtf input[type=submit] {
+  width: 20%!important;
 }
