--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,14 +1,10 @@
+
 {% include 'header.html' %}
-{{ turbo() }}
+{% import "bootstrap/wtf.html" as wtf %}
 
 <body>
-    <h1> Echange de messages avec
-         {% if author == current_user.username : %} 
-         {{ receiver }}
-         {% else : %}
-         {{ current_user.username }}
-         {% endif %} </h1>
-    <section class="container w-75 mt-5">
+    <h1> Messagerie {{ current_user.username }} - {{ receiver if current_user.username != receiver else messages[0].author }}</h1>
+    <section class="container w-75 mt-5 chat-box">
         <div class="list-group">
         <turbo-frame id="message-chat">
             {% for message in messages : %}
@@ -19,10 +15,7 @@
 
     <section class="container mt-5 mb-5">
         {% set new_receiver = receiver if receiver != current_user.username else messages[0].author %}
-        <form id="form" method="post" action="{{url_for('chat_page', username=username, receiver=new_receiver, message_id=messages[0].post_id)}}" class="row align-items-center w-100 justify-content-center">
-            {% include '_input_chat.html' %}
-            
-        </form>
+        {% include '_input_chat.html' %}
     </section>
 
 </body>
