--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,4 @@
+  {% block footer %}
   <footer>
         <nav class="container footer"> 
           <ul class="d-flex align-items-center justify-content-around">
@@ -5,11 +6,17 @@
             <li class="copyright text-muted">Copyright &copy; Aurelien P 2021</li>
         </ul>
         </nav>
+      <!-- Bootstrap core JavaScript -->
+  
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="{{ url_for('static', filename='js/autocompletion.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="{{ url_for('static', filename='js/flash.js') }}"></script>
+  <script>autocomplete(document.getElementById("research"), cards);</script>
+  <script>removeFlashes();</script>
+  
   </footer>
+  {% endblock %}
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
-  <!-- Custom scripts for this template 
-  <script src="{{ url_for('static', filename='js/clean-blog.min.js')}}"></script>
-  -->
