--- a/templates/header.html
+++ b/templates/header.html
@@ -1,38 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>MagicBay</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta author="AurelienP" />
-    <meta language="fr" />
-    <!--<link href="{{ url_for('static', filename='css/clean-blog.min.css')}}" rel="stylesheet">-->
 
-    <link
-      href="{{ url_for('static', filename='css/style.css')}}"
-      rel="stylesheet"
-    />
-    <!--<link href="{{ url_for('static', filename='css/style_modal.css')}}" rel="stylesheet"/>-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/header-style.css')}}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/tops-style.css')}}"/>
 
-   <!-- {{ turbo() }} -->
-  </head>
-
+  {% include '_head.html' %}
   <!-- NAVBAR A refaire sans bootstrap -->
   <body>
     <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top align-content-end ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('home')}}">MagicBay</a>
+      <div class="container">
+        <a class="logo-header me-2" href="{{ url_for('home')}}">
+          <img class="resp" src="{{url_for('static', filename='img/logo-rec.png')}}" alt="logo de MagicBay" title="MagicBay"></a>
 
         <button
           class="navbar-toggler"
@@ -45,16 +20,16 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <span class="navbar-text">
-          Achat Vente DeckBuilder
-          <span id="username">
-            {% if username : %}
-            <span class="navbar-text"> - </span>{{ username.capitalize() }} {%
-            endif %}
-          </span>
-        </span>
+        <h4 class="w-25 nav-title">MagicBay 
+        <span><br> Achat - Vente - DeckBuilder </span></h4>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+         
+
+            <span class="ms-auto" id="username"> {{ (username.capitalize() + ' - ') if username }} </span>
+
+          
+          <ul class="navbar-nav mb-2 mb-lg-0">
             {% if username and username != 'admin': %}
             <!-- FAIRE UN LINE HEIGH POUR TOUT ALIGNER CORRECTEMENT -->
             <li class="nav-item dropdown mb-auto">
@@ -63,24 +38,24 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li mt-2><a class="dropdown-item" href="{{ url_for('user_page', username=username) }}">Profil</a></li>
-                  <li mt-2><a class="dropdown-item" href="{{ url_for('message_page', username=username )}}">Messages</a></li>
                   <li mt-2><a class="dropdown-item" href="{{ url_for('buy_list_page', username=username) }}">Acheter</a></li>
                   <li mt-2><a class="dropdown-item" href="{{ url_for('sell_list_page', username=username) }}">Vendre</a></li>
                   <li mt-2><a class="dropdown-item" href="{{ url_for('deckbuilder_list_page', username=username) }}">DeckBuilder</a></li>
+                  <li mt-2><a class="dropdown-item" href="{{ url_for('message_page', username=username )}}">Messages</a></li>
+                  <li mt-2><a class="dropdown-item" href="{{ url_for('log_out_page', username=username) }}">Déconnexion</a></li>
                 </ul>
             </li>
 
-            {% endif %} {% if username == "admin" : %}
+            {% endif %} 
+            {% if username == "admin" : %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin_page')}}">Admin</a>
+              <a class="nav-link" href="{{ url_for('admin_page')}}">Page Admin</a>
             </li>
-            {% endif %} {% if username %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('log_out_page')}}"
-                >Déconnexion</a
-              >
+              <a class="nav-link" href="{{ url_for('log_out_page')}}">Déconnexion</a>
             </li>
-            {% endif %} {% if not username : %}
+            {% endif %} 
+            {% if not username : %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('register_page')}}"
                 >S'enregister</a
@@ -122,14 +97,4 @@
     </nav>
 </header>
 
-
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="{{ url_for('static', filename='js/autocompletion.js') }}"></script>
-
-<script>
-autocomplete(document.getElementById("research"), cards);
-
-</script>
 </html>
