--- a/templates/path_error/404.html
+++ b/templates/path_error/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/path_error.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/path_error.css')}}">
     <title> Erreur 404 </title>
 </head>
 <body>
